--- a/index.html
+++ b/index.html
@@ -29,26 +29,25 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header__contenedor">
-
-            <div class="header__logo">
-                <a href="index.html">
-                    <h1 class="logo">D'cor</h1>
-                </a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-color-verde">
+            <div class="container-fluid d-flex">
+                <a class="navbar-brand" href="#">D'cor</a>
+                <button class="navbar-toggler button-color" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon button-color"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="html/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="html/cursos.html">Cursos</a>
+                        <a class="nav-link" href="html/inspirate.html">Inspirate</a>
+                        <a class="nav-link" href="html/contacto.html">Contacto</a>
+                    </div>
+                </div>
             </div>
-
-            <nav class="headerNav">
-                <ul class="headerNav__list">
-                    <li><a class="item-list" href="index.html">Inicio</a></li>
-                    <li><a class="item-list" href="html/nosotros.html">Nosotros</a></li>
-                    <li><a class="item-list" href="html/cursos.html">Cursos</a></li>
-                    <li><a class="item-list" href="html/inspirate.html">Inspirate</a></li>
-                    <li><a class="item-list" href="html/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-
-        </div>
+        </nav>
     </header>
 
     <main>
