--- a/html/cursos.html
+++ b/html/cursos.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos</title>
 
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
     <!-- Estilos -->
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
     <!-- Fuente del logo -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-color-verde">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand" href="#">D'cor</a>
+                <a class="navbar-brand" href="../index.html">D'cor</a>
                 <button class="navbar-toggler button-color" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -51,103 +51,125 @@
     </header>
 
 
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../img/sliderInterior.webp" class="d-block w-100" alt="Imagen de interiores">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="carousel-h">Decoraión de interiores</h5>
+                    <p class="carousel-p">Decorá tus ambientes así y mucho más.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../img/sliderExterior.jpg" class="d-block w-100" alt="Imagen de exteriores">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5class="carousel-h">Decoración de exteriores</h5>
+                        <p class="carousel-p">Decorá tus ambientes así y mucho más.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../img/sliderOficina.jpg" class="d-block w-100" alt="Slider de oficina">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="carousel-h">Decoración de ambientes laborales</h5>
+                    <p class="carousel-p">Decorá tus ambientes así y mucho más.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
     <main class="cursos">
         <h2 class="cursos__title">Nuestros cursos</h2>
-        <article class="curso">
-            <img src="../img/cursoInterior.webp" alt="imagen curso interior">
-            <div>
-                <h3>Decoración de interiores</h3>
-                <p>Nuevo curso de decoración de interiores, aquí aprenderas todo lo necesario para desarrollarte en el
-                    área. Aprenderás sobre el mejor uso de colores y materiales para sacar el mejor provecho del
-                    espacio, aprenderás todo sobre cada estilo.</p>
+        <div class="card mb-3" style="max-width: 768px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="../img/cursoInterior.webp" class="img-fluid rounded-start" alt="Curso interior">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body bg-color-verdeLima">
+                        <h5 class="card-title">Decoración de interiores</h5>
+                        <p class="card-text">Nuevo curso de decoración de interiores, aquí aprenderas todo lo necesario
+                            para desarrollarte en el área. Aprenderás sobre el mejor uso de colores y materiales para
+                            sacar el mejor provecho del espacio, aprenderás todo sobre cada estilo.</p>
+                        <p class="card-text"><small class="text-muted">Envianos un mail para incribirte</small></p>
+                    </div>
+                </div>
             </div>
-        </article>
-        <article class="curso">
-            <img src="../img/cursoExterior.webp" alt="imagen curso interior">
-            <div>
-                <h3>Decoración de exteriores</h3>
-                <p>En este curso te enseñaremos lo que necesitas para decorar cualquier exterior, aprenderas los
-                    diferentes estilos de decoración, como seccionar áreas y que materiales conviene usar dependiendo
-                    cada situación.</p>
+        </div>
+        <div class="card mb-3" style="max-width: 768px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="../img/cursoxterior1.jpg" class="img-fluid rounded-start" alt="Curso exterior">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body bg-color-verdeLima">
+                        <h5 class="card-title">Decoración de exteriores</h5>
+                        <p class="card-text">En este curso te enseñaremos lo que necesitas para decorar cualquier
+                            exterior, aprenderas los diferentes estilos de decoración, como seccionar áreas y que
+                            materiales conviene usar dependiendo cada situación.</p>
+                        <p class="card-text"><small class="text-muted">Envianos un mail para incribirte</small></p>
+                    </div>
+                </div>
             </div>
-        </article>
-        <article class="curso">
-            <img src="../img/cursoOficinas.webp" alt="imagen curso interior">
-            <div>
-                <h3>Decoración de ambientes laborales</h3>
-                <p>Aprenderás lo necesario para que tu oficina o lugar de trabajo sea acogedor para todos, conseguirás
-                    que cualquier ambiente laboral sea atráctivo y cómodo.</p>
+        </div>
+        <div class="card mb-3" style="max-width: 768px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="../img/cursoOficinas.webp" class="img-fluid rounded-start" alt="Curso exterior">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body bg-color-verdeLima">
+                        <h5 class="card-title">Decoración oficinas</h5>
+                        <p class="card-text">Aprenderás lo necesario para que tu oficina o lugar de trabajo sea acogedor
+                            para todos, conseguirás que cualquier ambiente laboral sea atráctivo y cómodo.</p>
+                        <p class="card-text"><small class="text-muted">Envianos un mail para incribirte</small></p>
+                    </div>
+                </div>
             </div>
-        </article>
+        </div>
     </main>
 
-    <section class="sectionRedes">
-        <div class="sectionRedes__icons">
-            <a href="https://www.instagram.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <rect x="4" y="4" width="16" height="16" rx="4" />
-                    <circle cx="12" cy="12" r="3" />
-                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-                </svg>
-            </a>
-            <a href="https://www.facebook.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-                </svg>
-            </a>
-            <a href="https://www.twitter.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path
-                        d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
-                </svg>
-            </a>
-            <a href="https://www.pinterest.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-pinterest redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <line x1="8" y1="20" x2="12" y2="11" />
-                    <path d="M10.7 14c.437 1.263 1.43 2 2.55 2c2.071 0 3.75 -1.554 3.75 -4a5 5 0 1 0 -9.7 1.7" />
-                    <circle cx="12" cy="12" r="9" />
-                </svg>
-            </a>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="footer__contenido">
-            <nav class="footer__contenido-div">
-                <h3>Redes sociales</h3>
-                <ul>
-                    <li>Instagram</li>
-                    <li>Facebook</li>
-                    <li>Twitter</li>
+    <footer class="bg-dark text-white mt-4">
+        <div class="container">
+            <nav class="column  justify-content-evenly align-items-center d-flex">
+                <a href="../index.html" class="text-reset text-uppercase text-align-center logo-footer row">D'cor</a>
+                <ul class=" list-unstyled">
+                    <li class="font-weight-bold text-uppercase">Navegación</li>
+                    <li><a href="../index.html"text-reset">Inicio</a></li>
+                    <li><a href="nosotros.html" class="text-reset">Nosotros</a></li>
+                    <li><a href="cursos.html" class="text-reset">Cursos</a></li>
+                    <li><a href="inspirate.html" class="text-reset">Inspirate</a></li>
+                    <li><a href="contacto.html" class="text-reset">Contacto</a></li>
+                </ul>
+                <ul class=" list-unstyled">
+                    <li class="font-weight-bold text-uppercase">Redes sociales</li>
+                    <li><a href="https://www.instagram.com" class="text-reset">Instagram</a></li>
+                    <li><a href="https://www.facebook.com" class="text-reset">Facebook</a></li>
+                    <li><a href="https://www.twitter.com" class="text-reset">Twitter</a></li>
+                    <li><a href="https://www.pinterest.com" class="text-reset">Pinterest</a></li>
+                    <li><a href="https://www.telegram.com" class="text-reset">Telegram</a></li>
                 </ul>
             </nav>
-            <div class="footer__contenido-div">
-                <h3>Contacto</h3>
-                <ul>
-                    <li>Mail: dcor_contact@gmail.com</li>
-                    <li>What's App: +541133334444</li>
-                    <li>Dirección: Avenida Córdoba 594</li>
-                </ul>
-            </div>
-            <div class="footer__contenido-div">
-                <h2 class="logo">D'cor</h2>
-            </div>
         </div>
-        <h4 class="footer__copyright">Copyright © D'cor 2022</h4>
     </footer>
-
+   
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
