--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -51,116 +51,98 @@
     </header>
 
     <main class="bannerNosotros">
-        <div class="bannerNosotros__container">
-            <h2>Sobre nosotros</h2>
-            <p>Somos una empresa de decoración con mas de 10 años de experiencia en el rubro. Estamos presentes en más
+        <div class="bannerNosotros__content text-whitev ">
+            <h2 class="mb-1">Sobre nosotros</h2>
+            <p class="mb-1">Somos una empresa de decoración con mas de 10 años de experiencia en el rubro. Estamos presentes en más
                 de 12 países, ofreciendo nuestros servicios desde Argentina al mundo.</p>
         </div>
         <div class="bannerNosotros__shadow">
         </div>
     </main>
 
-    <section class="staff">
+    <section class="staff p-2">
         <h2 class="staff__title">Nuestro equipo de trabajo</h2>
-        <div class="staff__container">
-            <div class="staff__container-card">
-                <img src="../img/director.webp" alt="director">
-                <h3>Tomas Ramires</h3>
-                <p>Director y fundador de nuestra empresa, con 25 años de experiencia en administración.</p>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card bg-color-verdeLima">
+                    <img src="../img/director.webp" alt="director" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Tomás Ramires</h5>
+                        <p class="card-text">Director y fundador de nuestra empresa, con 25 años de experiencia en administración..</p>
+                    </div>
+                </div>
             </div>
-            <div class="staff__container-card">
-                <img src="../img/liderDeRecursosH.webp" alt="lider de recursos humanos">
-                <h3>María Martinez</h3>
-                <p>Líder de recursos humanos, nos acompña hace 4 años.</p>
+            <div class="col">
+                <div class="card bg-color-verdeLima">
+                    <img src="../img/liderDeRecursosH.webp" class="card-img-top" alt="Lider de recursos humanos">
+                    <div class="card-body">
+                        <h5 class="card-title">María Martinez</h5>
+                        <p class="card-text">Líder de recursos humanos, nos acompña hace 4 años.</p>
+                    </div>
+                </div>
             </div>
-            <div class="staff__container-card">
-                <img src="../img/maestroDeObra.webp" alt="maestro mayor de obras">
-                <h3>Raúl Lopez</h3>
-                <p>Maestro mayor de obras. Encargado del proceso de reformas de espacios.</p>
+            <div class="col">
+                <div class="card bg-color-verdeLima">
+                    <img src="../img/maestroDeObra.webp" class="card-img-top" alt="Maestro mayor de obras">
+                    <div class="card-body">
+                        <h5 class="card-title">Raúl Lopez</h5>
+                        <p class="card-text">Maestro mayor de obras. Encargado del proceso de reformas de espacios.</p>
+                    </div>
+                </div>
             </div>
-            <div class="staff__container-card">
-                <img src="../img/decoradora.webp" alt="decoradora">
-                <h3>Julieta Miles</h3>
-                <p>Decoradora encargada de la administración del sector.</p>
+            <div class="col">
+                <div class="card bg-color-verdeLima">
+                    <img src="../img/decoradora.webp" class="card-img-top" alt="Decoradora de interiores">
+                    <div class="card-body">
+                        <h5 class="card-title">Juliet
+                        Miles</h5>
+                        <p class="card-text">Decoradora encargada de la administración del sector.</p>
+                    </div>
+                </div>
             </div>
-            <div class="staff__container-card">
-                <img src="../img/Decorador.webp" alt="decorador">
-                <h3>Matías Morales</h3>
-                <p>Decorador encargado del sector de cursos.</p>
+            <div class="col">
+                <div class="card bg-color-verdeLima">
+                    <img src="../img/Decorador.webp" class="card-img-top" alt="Decorador">
+                    <div class="card-body">
+                        <h5 class="card-title">Matías Morales</h5>
+                        <p class="card-text">Decorador encargado del sector de cursos.</p>
+                    </div>
+                </div>
             </div>
-            <div class="staff__container-card">
-                <img src="../img/programador.webp" alt="lider de recursos humanos">
-                <h3>Juan Rodriguez</h3>
-                <p>Encargado del grupo de programadores de nuestra empresa.</p>
+            <div class="col">
+                <div class="card bg-color-verdeLima">
+                    <img src="../img/programador.webp" class="card-img-top" alt="Programador">
+                    <div class="card-body">
+                        <h5 class="card-title">Juan Rodriguez</h5>
+                        <p class="card-text">Encargado del grupo de programadores de nuestra empresa.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="sectionRedes">
-        <div class="sectionRedes__icons">
-            <a href="https://www.instagram.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <rect x="4" y="4" width="16" height="16" rx="4" />
-                    <circle cx="12" cy="12" r="3" />
-                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-                </svg>
-            </a>
-            <a href="https://www.facebook.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-                </svg>
-            </a>
-            <a href="https://www.twitter.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path
-                        d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
-                </svg>
-            </a>
-            <a href="https://www.pinterest.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-pinterest redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <line x1="8" y1="20" x2="12" y2="11" />
-                    <path d="M10.7 14c.437 1.263 1.43 2 2.55 2c2.071 0 3.75 -1.554 3.75 -4a5 5 0 1 0 -9.7 1.7" />
-                    <circle cx="12" cy="12" r="9" />
-                </svg>
-            </a>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="footer__contenido">
-            <nav class="footer__contenido-div">
-                <h3>Redes sociales</h3>
-                <ul>
-                    <li>Instagram</li>
-                    <li>Facebook</li>
-                    <li>Twitter</li>
+    <footer class="bg-dark text-white mt-4">
+        <div class="container">
+            <nav class="column  justify-content-evenly align-items-center d-flex">
+                <a href="../index.html" class="text-reset text-uppercase text-align-center logo-footer row">D'cor</a>
+                <ul class=" list-unstyled">
+                    <li class="font-weight-bold text-uppercase">Navegación</li>
+                    <li><a href="../index.html" text-reset">Inicio</a></li>
+                    <li><a href="nosotros.html" class="text-reset">Nosotros</a></li>
+                    <li><a href="cursos.html" class="text-reset">Cursos</a></li>
+                    <li><a href="inspirate.html" class="text-reset">Inspirate</a></li>
+                    <li><a href="contacto.html" class="text-reset">Contacto</a></li>
+                </ul>
+                <ul class=" list-unstyled">
+                    <li class="font-weight-bold text-uppercase">Redes sociales</li>
+                    <li><a href="https://www.instagram.com" class="text-reset">Instagram</a></li>
+                    <li><a href="https://www.facebook.com" class="text-reset">Facebook</a></li>
+                    <li><a href="https://www.twitter.com" class="text-reset">Twitter</a></li>
+                    <li><a href="https://www.pinterest.com" class="text-reset">Pinterest</a></li>
+                    <li><a href="https://www.telegram.com" class="text-reset">Telegram</a></li>
                 </ul>
             </nav>
-            <div class="footer__contenido-div">
-                <h3>Contacto</h3>
-                <ul>
-                    <li>Mail: dcor_contact@gmail.com</li>
-                    <li>What's App: +541133334444</li>
-                    <li>Dirección: Avenida Córdoba 594</li>
-                </ul>
-            </div>
-            <div class="footer__contenido-div">
-                <h2 class="logo">D'cor</h2>
-            </div>
         </div>
-        <h4 class="footer__copyright">Copyright © D'cor 2022</h4>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
