--- a/index.html
+++ b/index.html
@@ -64,108 +64,58 @@
         </div>
     </main>
 
-    <section class="section">
-
-        <h2 class="section__title">Contenido Nuevo</h2>
-
-        <article class="card cursoInterior">
-            <div class="card__contenido">
-                <h3>Nuevo curso</h3>
-                <p>Inscribite a nuestro nuevo curso sobre decoración de interiores, aprendé todo lo que necesitas.</p>
-                <button class="button"><a href="html/cursos.html">Ver más</a></button>
+    <section class="news">
+        <h3 class="news-title">Novedades</h3>
+        <div class="card text-center border-radius mb-3">
+            <div class="card-header mb-3 bg-color-verde text-white">
+                Nuevo curso
             </div>
-            <div class="card__shadow"></div>
-        </article>
-
-        <article class="card cursoExterior">
-            <div class="card__contenido">
-                <h3>Nuevo curso</h3>
-                <p>Comenzó el nuevo curso sobre decoración exterior, aprendé lo que necesitas para conseguir exteriores
-                    soñados.</p>
-                <button class="button"><a href="html/cursos.html">Ver más</a></button>
+            <div class="card-body mb-3">
+              <h5 class="card-title">Decoración de interiores</h5>
+              <p class="card-text mb-3 ">Inscribite a este nuevo curso.</p>
+              <a href="#" class="button">Ver más</a>
             </div>
-            <div class="card__shadow"></div>
-        </article>
-
-        <article class="card cursoTrabajo">
-            <div class="card__contenido">
-                <h3>Nuevo curso</h3>
-                <p>Decorá cualquier lugar de trabajo con este nuevo curso, aprende desde lo básico hasta lo avanzado
-                    sobre decoración de espacios laborales.</p>
-                <button class="button">
-                    <a href="html/cursos.html">Ver más</a>
-                </button>
+            <div class="card-footer text-muted">
+              2 days ago
             </div>
-            <div class="card__shadow"></div>
-        </article>
-
-    </section>
-
-    <section class="sectionRedes">
-        <div class="sectionRedes__icons">
-            <a href="https://www.instagram.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <rect x="4" y="4" width="16" height="16" rx="4" />
-                    <circle cx="12" cy="12" r="3" />
-                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-                </svg>
-            </a>
-            <a href="https://www.facebook.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-                </svg>
-            </a>
-            <a href="https://www.twitter.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path
-                        d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
-                </svg>
-            </a>
-            <a href="https://www.pinterest.com">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-pinterest redesIcon"
-                    width="90" height="90" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
-                    stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <line x1="8" y1="20" x2="12" y2="11" />
-                    <path d="M10.7 14c.437 1.263 1.43 2 2.55 2c2.071 0 3.75 -1.554 3.75 -4a5 5 0 1 0 -9.7 1.7" />
-                    <circle cx="12" cy="12" r="9" />
-                </svg>
-            </a>
+        </div>
+        <div class="card text-center border-radius mb-3">
+            <div class="card-header mb-3 bg-color-verde text-white">
+                Nuevo curso
+            </div>
+            <div class="card-body mb-3">
+              <h5 class="card-title">Decoración de interiores</h5>
+              <p class="card-text mb-3 ">Inscribite a este nuevo curso.</p>
+              <a href="#" class="button">Ver más</a>
+            </div>
+            <div class="card-footer text-muted">
+              2 days ago
+            </div>
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="footer__contenido">
-            <nav class="footer__contenido-div">
-                <h3>Redes sociales</h3>
-                <ul>
-                    <li>Instagram</li>
-                    <li>Facebook</li>
-                    <li>Twitter</li>
+    <footer class="bg-dark text-white mt-4">
+        <div class="container">
+            <nav class="column justify-content-evenly align-items-center d-flex">
+                <a href="index.html" class="text-reset text-uppercase text-align-center logo-footer row">D'cor</a>
+                <ul class=" list-unstyled">
+                    <li class="font-weight-bold text-uppercase">Navegación</li>
+                    <li><a href="index.html"text-reset">Inicio</a></li>
+                    <li><a href="html/nosotros.html" class="text-reset">Nosotros</a></li>
+                    <li><a href="html/cursos.html" class="text-reset">Cursos</a></li>
+                    <li><a href="html/inspirate.html" class="text-reset">Inspirate</a></li>
+                    <li><a href="html/contacto.html" class="text-reset">Contacto</a></li>
+                </ul>
+                <ul class=" list-unstyled">
+                    <li class="font-weight-bold text-uppercase">Redes sociales</li>
+                    <li><a href="https://www.instagram.com" class="text-reset">Instagram</a></li>
+                    <li><a href="https://www.facebook.com" class="text-reset">Facebook</a></li>
+                    <li><a href="https://www.twitter.com" class="text-reset">Twitter</a></li>
+                    <li><a href="https://www.pinterest.com" class="text-reset">Pinterest</a></li>
+                    <li><a href="https://www.telegram.com" class="text-reset">Telegram</a></li>
                 </ul>
             </nav>
-            <div class="footer__contenido-div">
-                <h3>Contacto</h3>
-                <ul>
-                    <li>Mail: dcor_contact@gmail.com</li>
-                    <li>What's App: +541133334444</li>
-                    <li>Dirección: Avenida Córdoba 594</li>
-                </ul>
-            </div>
-            <div class="footer__contenido-div">
-                <h2 class="logo">D'cor</h2>
-            </div>
         </div>
-        <h4 class="footer__copyright">Copyright © D'cor 2022</h4>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
