pagina completa responsive

--- a/html/cursos.html
+++ b/html/cursos.html
@@ -64,7 +64,7 @@
             <div class="carousel-item active">
                 <img src="../img/sliderInterior.webp" class="d-block w-100" alt="Imagen de interiores">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carousel-h">Decoraión de interiores</h5>
+                    <h5 class="carousel-h">Decoración de interiores</h5>
                     <p class="carousel-p">Decorá tus ambientes así y mucho más.</p>
                 </div>
             </div>
@@ -100,7 +100,7 @@
         <div class="card mb-3" style="max-width: 768px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="../img/cursoInterior.webp" class="img-fluid rounded-start" alt="Curso interior">
+                    <img src="../img/cursoInterior.webp" class="img-fluid rounded-start center" alt="Curso interior">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body bg-color-verdeLima">
@@ -108,7 +108,7 @@
                         <p class="card-text">Nuevo curso de decoración de interiores, aquí aprenderas todo lo necesario
                             para desarrollarte en el área. Aprenderás sobre el mejor uso de colores y materiales para
                             sacar el mejor provecho del espacio, aprenderás todo sobre cada estilo.</p>
-                        <p class="card-text"><small class="text-muted">Envianos un mail para incribirte</small></p>
+                        <p class="card-text"><small class="text-muted">Dejanos tu mensaje en contacto para inscribirte</small></p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
         <div class="card mb-3" style="max-width: 768px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="../img/cursoxterior1.jpg" class="img-fluid rounded-start" alt="Curso exterior">
+                    <img src="../img/cursoxterior1.jpg" class="img-fluid rounded-start center" alt="Curso exterior">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body bg-color-verdeLima">
@@ -124,7 +124,7 @@
                         <p class="card-text">En este curso te enseñaremos lo que necesitas para decorar cualquier
                             exterior, aprenderas los diferentes estilos de decoración, como seccionar áreas y que
                             materiales conviene usar dependiendo cada situación.</p>
-                        <p class="card-text"><small class="text-muted">Envianos un mail para incribirte</small></p>
+                        <p class="card-text"><small class="text-muted">Dejanos tu mensaje en contacto para inscribirte</small></p>
                     </div>
                 </div>
             </div>
@@ -132,14 +132,14 @@
         <div class="card mb-3" style="max-width: 768px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="../img/cursoOficinas.webp" class="img-fluid rounded-start" alt="Curso exterior">
+                    <img src="../img/cursoOficinas.webp" class="img-fluid rounded-start center" alt="Curso exterior">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body bg-color-verdeLima">
                         <h5 class="card-title">Decoración oficinas</h5>
                         <p class="card-text">Aprenderás lo necesario para que tu oficina o lugar de trabajo sea acogedor
                             para todos, conseguirás que cualquier ambiente laboral sea atráctivo y cómodo.</p>
-                        <p class="card-text"><small class="text-muted">Envianos un mail para incribirte</small></p>
+                        <p class="card-text"><small class="text-muted">Dejanos tu mensaje en contacto para inscribirte</small></p>
                     </div>
                 </div>
             </div>
