--- a/html/inspirate.html
+++ b/html/inspirate.html
@@ -32,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-color-verde">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand" href="#">D'cor</a>
+                <a class="navbar-brand" href="../index.html">D'cor</a>
                 <button class="navbar-toggler button-color" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -50,39 +50,130 @@
         </nav>
     </header>
 
-    <main class="catalogue">
-        <div class="catalogue__search">
-            <form action="">
-                <input type="search">
-            </form>
-        </div>
-        <div class="catalogue__content">
-            <img src="../img/inspirate.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate01.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate02.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate03.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate04.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate05.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate06.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate07.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate08.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate09.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate10.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate11.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate12.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate13.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate14.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate15.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate16.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate17.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate18.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate19.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate20.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate21.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate22.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate23.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate24.jpg" alt="imagen inspirate">
-            <img src="../img/inspirate25.jpg" alt="imagen inspirate">
+    <main>
+        <h2 class="gallery-title">Inspirate!</h2>
+        <div class="gallery">
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate01.webp" alt="item 1">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-3">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate02.webp" alt="item 2">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate03.webp" alt="item 3">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container h-2 w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate04.webp" alt="item 4">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate05.webp" alt="item 5">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate06.jpg" alt="item 6">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate07.webp" alt="item 7">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-3 h-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate08.webp" alt="item 8">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-3">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate09.webp" alt="item 9">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-3 h-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate10.webp" alt="item 10">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate11.webp" alt="item 11">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate12.webp" alt="item 12">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate13.webp" alt="item 13">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate14.webp" alt="item 14">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2 h-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate15.webp" alt="item 15">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate16.webp" alt="item 16">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-3">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="../img/inspirate17.webp" alt="item 17">
+                    </div>
+                </div>
+            </div>
+            
+            
         </div>
     </main>
 
