--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-color-verde">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand" href="#">D'cor</a>
+                <a class="navbar-brand" href="index.html">D'cor</a>
                 <button class="navbar-toggler button-color" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
     </header>
 
     <main>
-        <div class="banner">
+        <div class="banner text-center">
             <div class="banner__contenido">
                 <p class="banner__text">Decorá tus ambientes con el mejor estilo</p>
                 <p class="banner__subtext">Mirate nuestro catálogo y encontrá el estilo que tanto buscas</p>
@@ -73,7 +73,7 @@
             <div class="card-body mb-3">
               <h5 class="card-title">Decoración de interiores</h5>
               <p class="card-text mb-3 ">Inscribite a este nuevo curso.</p>
-              <a href="#" class="button">Ver más</a>
+              <a href="html/cursos.html" class="button">Ver más</a>
             </div>
             <div class="card-footer text-muted">
               2 days ago
@@ -86,7 +86,7 @@
             <div class="card-body mb-3">
               <h5 class="card-title">Decoración de interiores</h5>
               <p class="card-text mb-3 ">Inscribite a este nuevo curso.</p>
-              <a href="#" class="button">Ver más</a>
+              <a href="html/cursos.html" class="button">Ver más</a>
             </div>
             <div class="card-footer text-muted">
               2 days ago
