--- a/html/contacto.html
+++ b/html/contacto.html
@@ -32,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-color-verde">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand" href="#">D'cor</a>
+                <a class="navbar-brand" href="../index.html">D'cor</a>
                 <button class="navbar-toggler button-color" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -50,15 +50,49 @@
         </nav>
     </header>
 
-    <main>
-        <h2>Nuestras Sucursales</h2>
-        <iframe
+    <main class="map-container">
+        <h2 class="map-title">Nuestras Sucursales</h2>
+        <div>
+            <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7473554669405!2d-58.36529968560879!3d-34.61054958045764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a335284b50364d%3A0x92d3ddd4ab7187d9!2sAzucena%20Maizani%20351-397%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661945764982!5m2!1sen!2sar"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+        </div>
     </main>
 
-    <section>
+    <section class="container">
+        <div class="container bg-dark border-radius">
+            <form class="row g-3 text-white border-radius">
+                <h3 class="text-center">Contáctanos</h3>
+                <div class="col-md-6 col-12">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" placeholder="Escribe tu nombre">
+                </div>
+                <div class="col-md-6 col-12">
+                    <label for="apellido" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="apellido" placeholder="Escribe tu apellido">
+                </div>
+                <div class="col-md-6 col-12">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="ejemplo@mail.com">
+                </div>
+                <div class="col-md-6 col-12">
+                    <label for="telefono" class="form-label">Teléfono</label>
+                    <input type="tel" class="form-control" id="telefono" placeholder="Tu número de contacto">
+                </div>
+                <div class="col-12">
+                    <label for="mensaje" class="form-label">Mensaje</label>
+                    <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="form-control"></textarea>
+                </div>
+                <div class="">
+                    <button type="submit" class="btn btn-primary btn-size col-12 col-md-4 col-lg-2">
+                        Enviar
+                    </button>
+                </div>
+            </form>
+        </div>
+    </section>
+    <!-- <section>
         <h2>Contáctanos</h2>
         <form action="">
             <label for="nombre">Nombre</label>
@@ -72,7 +106,7 @@
             <label for="mensaje">Mensaje</label>
             <textarea name="mensaje" id="" cols="30" rows="10"></textarea>
         </form>
-    </section>
+    </section> -->
 
     <footer class="bg-dark text-white mt-4">
         <div class="container">
@@ -80,7 +114,7 @@
                 <a href="../index.html" class="text-reset text-uppercase text-align-center logo-footer row">D'cor</a>
                 <ul class=" list-unstyled">
                     <li class="font-weight-bold text-uppercase">Navegación</li>
-                    <li><a href="../index.html"text-reset">Inicio</a></li>
+                    <li><a href="../index.html" text-reset">Inicio</a></li>
                     <li><a href="nosotros.html" class="text-reset">Nosotros</a></li>
                     <li><a href="cursos.html" class="text-reset">Cursos</a></li>
                     <li><a href="inspirate.html" class="text-reset">Inspirate</a></li>
