--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -32,7 +32,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-color-verde">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand" href="#">D'cor</a>
+                <a class="navbar-brand" href="../index.html">D'cor</a>
                 <button class="navbar-toggler button-color" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
