sass completo aplicado

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -99,7 +99,7 @@
                 <a href="../index.html" class="text-reset text-uppercase text-align-center logo-footer row">D'cor</a>
                 <ul class=" list-unstyled">
                     <li class="font-weight-bold text-uppercase">Navegación</li>
-                    <li><a href="../index.html" text-reset">Inicio</a></li>
+                    <li><a href="../index.html" class="text-reset">Inicio</a></li>
                     <li><a href="nosotros.html" class="text-reset">Nosotros</a></li>
                     <li><a href="cursos.html" class="text-reset">Cursos</a></li>
                     <li><a href="inspirate.html" class="text-reset">Inspirate</a></li>
