--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
     <!-- Estilos -->
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <!-- Fuente del logo -->
@@ -100,7 +100,7 @@
                 <a href="index.html" class="text-reset text-uppercase text-align-center logo-footer row">D'cor</a>
                 <ul class=" list-unstyled">
                     <li class="font-weight-bold text-uppercase">Navegación</li>
-                    <li><a href="index.html"text-reset">Inicio</a></li>
+                    <li><a href="index.html" class="text-reset">Inicio</a></li>
                     <li><a href="html/nosotros.html" class="text-reset">Nosotros</a></li>
                     <li><a href="html/cursos.html" class="text-reset">Cursos</a></li>
                     <li><a href="html/inspirate.html" class="text-reset">Inspirate</a></li>
