--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>D'cor | Contactanos por maíl o visita a nuestras sucursales</title>
+    <meta name="description" content="Donde podés contactarnos">
+    <meta name="keywords" content="decoración, diseño de interiores, diseño de exteriores, diseño de oficinas, trabajo, cursos, cursos de diseño, cursos de decoración, muebles, paletas de colores, iluminación, ambientes, casa, hogares, living, cocina, habitación, dormitorio, baños, patio, patio trasero, patio delantero, consultas, contacto, informacion, mail, teleono, ubicación">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,6 +28,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;500&display=swap" rel="stylesheet">
 
+    <!-- icono -->
+    <link rel="icon" href="../img/favicon.ico">
 </head>
 
 <body>
@@ -54,7 +58,7 @@
         <h2 class="map-title">Nuestras Sucursales</h2>
         <div>
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7473554669405!2d-58.36529968560879!3d-34.61054958045764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a335284b50364d%3A0x92d3ddd4ab7187d9!2sAzucena%20Maizani%20351-397%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661945764982!5m2!1sen!2sar"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7473554669405!2d-58.36529968560879!3d-34.61054958045764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a335284b50364d%3A0x92d3ddd4ab7187d9!2sAzucena%20Maizani%20351-397%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661945764982!5m2!1sen!2sar" title="Google map"
             width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
         </div>
