--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>D'cor | Sobre nosotros, nuestro Staff y propósito</title>
+    <meta name="description" content="Nuestros compañeros, el propósito y la trayectoria de nuestra empresa">
+    <meta name="keywords"
+        content="decoración, diseño de interiores, diseño de exteriores, diseño de oficinas, trabajo, cursos, cursos de diseño, cursos de decoración, muebles, paletas de colores, iluminación, ambientes, casa, hogares, living, cocina, habitación, dormitorio, baños, patio, patio trasero, patio delantero, staff, sobre nosotros, nosotros, nuestro equipo, propósito">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,6 +29,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;500&display=swap" rel="stylesheet">
 
+    <!-- icono -->
+    <link rel="icon" href="../img/favicon.ico">
 </head>
 
 <body>
@@ -53,7 +58,8 @@
     <main class="bannerNosotros">
         <div class="bannerNosotros__content text-whitev ">
             <h2 class="mb-1">Sobre nosotros</h2>
-            <p class="mb-1">Somos una empresa de decoración con mas de 10 años de experiencia en el rubro. Estamos presentes en más
+            <p class="mb-1">Somos una empresa de decoración con mas de 10 años de experiencia en el rubro. Estamos
+                presentes en más
                 de 12 países, ofreciendo nuestros servicios desde Argentina al mundo.</p>
         </div>
         <div class="bannerNosotros__shadow">
@@ -65,16 +71,17 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card bg-color-verdeLima">
-                    <img src="../img/director.webp" alt="director" class="card-img-top">
+                    <img src="../img/director.webp" alt="director">
                     <div class="card-body">
                         <h5 class="card-title">Tomás Ramires</h5>
-                        <p class="card-text">Director y fundador de nuestra empresa, con 25 años de experiencia en administración..</p>
+                        <p class="card-text">Director y fundador de nuestra empresa, con 25 años de experiencia en
+                            administración..</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card bg-color-verdeLima">
-                    <img src="../img/liderDeRecursosH.webp" class="card-img-top" alt="Lider de recursos humanos">
+                    <img src="../img/liderDeRecursosH.webp" alt="Lider de recursos humanos">
                     <div class="card-body">
                         <h5 class="card-title">María Martinez</h5>
                         <p class="card-text">Líder de recursos humanos, nos acompña hace 4 años.</p>
@@ -83,7 +90,7 @@
             </div>
             <div class="col">
                 <div class="card bg-color-verdeLima">
-                    <img src="../img/maestroDeObra.webp" class="card-img-top" alt="Maestro mayor de obras">
+                    <img src="../img/maestroDeObra.webp" alt="Maestro mayor de obras">
                     <div class="card-body">
                         <h5 class="card-title">Raúl Lopez</h5>
                         <p class="card-text">Maestro mayor de obras. Encargado del proceso de reformas de espacios.</p>
@@ -92,17 +99,17 @@
             </div>
             <div class="col">
                 <div class="card bg-color-verdeLima">
-                    <img src="../img/decoradora.webp" class="card-img-top" alt="Decoradora de interiores">
+                    <img src="../img/decoradora.webp" alt="Decoradora de interiores">
                     <div class="card-body">
                         <h5 class="card-title">Juliet
-                        Miles</h5>
+                            Miles</h5>
                         <p class="card-text">Decoradora encargada de la administración del sector.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card bg-color-verdeLima">
-                    <img src="../img/Decorador.webp" class="card-img-top" alt="Decorador">
+                    <img src="../img/Decorador.webp" alt="Decorador">
                     <div class="card-body">
                         <h5 class="card-title">Matías Morales</h5>
                         <p class="card-text">Decorador encargado del sector de cursos.</p>
@@ -111,7 +118,7 @@
             </div>
             <div class="col">
                 <div class="card bg-color-verdeLima">
-                    <img src="../img/programador.webp" class="card-img-top" alt="Programador">
+                    <img src="../img/programador.webp" alt="Programador">
                     <div class="card-body">
                         <h5 class="card-title">Juan Rodriguez</h5>
                         <p class="card-text">Encargado del grupo de programadores de nuestra empresa.</p>
