--- a/html/cursos.html
+++ b/html/cursos.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos</title>
+    <title>D'cor | Nuestros cursos y capacitaciones</title>
+    <meta name="description" content="Cursos y capacitaciones disponibles">
+    <meta name="keywords" content="decoración, diseño de interiores, diseño de exteriores, diseño de oficinas, trabajo, cursos, cursos de diseño, cursos de decoración, muebles, paletas de colores, iluminación, ambientes, casa, hogares, living, cocina, habitación, dormitorio, baños, patio, patio trasero, patio delantero, cursos, capacitaciones, cursada">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,6 +28,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;500&display=swap" rel="stylesheet">
 
+    <!-- icono -->
+    <link rel="icon" href="../img/favicon.ico">
 </head>
 
 <body>
