--- a/html/inspirate.html
+++ b/html/inspirate.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inspirate</title>
+    <title>D'cor | Inspirate con estas excelentes ideas</title>
+    <meta name="description" content="Nuestras ideas y las de nuestros usuarios">
+    <meta name="keywords" content="decoración, diseño de interiores, diseño de exteriores, diseño de oficinas, trabajo, cursos, cursos de diseño, cursos de decoración, muebles, paletas de colores, iluminación, ambientes, casa, hogares, living, cocina, habitación, dormitorio, baños, patio, patio trasero, patio delantero, catálogo de decoración, galería">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,6 +28,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;500&display=swap" rel="stylesheet">
 
+    <!-- icono -->
+    <link rel="icon" href="../img/favicon.ico">
 </head>
 
 <body>
@@ -56,119 +60,119 @@
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate01.webp" alt="item 1">
+                        <img src="../img/inspirate01.webp" alt="imagen 1">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-3">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate02.webp" alt="item 2">
+                        <img src="../img/inspirate02.webp" alt="imagen 2">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate03.webp" alt="item 3">
+                        <img src="../img/inspirate03.webp" alt="imagen 3">
                     </div>
                 </div>
             </div>
             <div class="gallery-container h-2 w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate04.webp" alt="item 4">
+                        <img src="../img/inspirate04.webp" alt="imagen 4">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate05.webp" alt="item 5">
+                        <img src="../img/inspirate05.webp" alt="imagen 5">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate06.jpg" alt="item 6">
+                        <img src="../img/inspirate06.jpg" alt="imagen 6">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate07.webp" alt="item 7">
+                        <img src="../img/inspirate07.webp" alt="imagen 7">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-3 h-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate08.webp" alt="item 8">
+                        <img src="../img/inspirate08.webp" alt="imagen 8">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-3">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate09.webp" alt="item 9">
+                        <img src="../img/inspirate09.webp" alt="imagen 9">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-3 h-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate10.webp" alt="item 10">
+                        <img src="../img/inspirate10.webp" alt="imagen 10">
                     </div>
                 </div>
             </div>
             <div class="gallery-container">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate11.webp" alt="item 11">
+                        <img src="../img/inspirate11.webp" alt="imagen 11">
                     </div>
                 </div>
             </div>
             <div class="gallery-container">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate12.webp" alt="item 12">
+                        <img src="../img/inspirate12.webp" alt="imagen 12">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate13.webp" alt="item 13">
+                        <img src="../img/inspirate13.webp" alt="imagen 13">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate14.webp" alt="item 14">
+                        <img src="../img/inspirate14.webp" alt="imagen 14">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-2 h-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate15.webp" alt="item 15">
+                        <img src="../img/inspirate15.webp" alt="imagen 15">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate16.webp" alt="item 16">
+                        <img src="../img/inspirate16.webp" alt="imagen 16">
                     </div>
                 </div>
             </div>
             <div class="gallery-container w-3">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="../img/inspirate17.webp" alt="item 17">
+                        <img src="../img/inspirate17.webp" alt="imagen 17">
                     </div>
                 </div>
             </div>
