--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D'cor</title>
+    <title>D'cor | Tu sitio para asesorarte sobre elmejor estilo</title>
+    <meta name="description"
+        content="Sitio web para aprender los fundamentos de la decoración en general, para poder decorar los ambientes y lugares que quieras">
+    <meta name="keywords"
+        content="decoración, diseño de interiores, diseño de exteriores, diseño de oficinas, trabajo, cursos, cursos de diseño, cursos de decoración, muebles, paletas de colores, iluminación, ambientes, casa, hogares, living, cocina, habitación, dormitorio, baños, patio, patio trasero, patio delantero">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,6 +30,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;500&display=swap" rel="stylesheet">
 
+    <!-- icono -->
+    <link rel="icon" href="../img/favicon.ico">
 </head>
 
 <body>
@@ -60,7 +66,7 @@
 
             <div class="banner__shadow"></div>
 
-            <video src="img/videoBanner2.mp4" autoplay muted loop></video>
+            <video src="img/videoBanner2.mp4" title="Video Banner" alt="Banner del inicio" autoplay muted loop></video>
         </div>
     </main>
 
@@ -71,12 +77,12 @@
                 Nuevo curso
             </div>
             <div class="card-body mb-3">
-              <h5 class="card-title">Decoración de interiores</h5>
-              <p class="card-text mb-3 ">Inscribite a este nuevo curso.</p>
-              <a href="html/cursos.html" class="button">Ver más</a>
+                <h5 class="card-title">Decoración de interiores</h5>
+                <p class="card-text mb-3 ">Inscribite a este nuevo curso.</p>
+                <a href="html/cursos.html" class="button">Ver más</a>
             </div>
             <div class="card-footer text-muted">
-              2 days ago
+                2 days ago
             </div>
         </div>
         <div class="card text-center border-radius mb-3">
@@ -84,12 +90,12 @@
                 Nuevo curso
             </div>
             <div class="card-body mb-3">
-              <h5 class="card-title">Decoración de interiores</h5>
-              <p class="card-text mb-3 ">Inscribite a este nuevo curso.</p>
-              <a href="html/cursos.html" class="button">Ver más</a>
+                <h5 class="card-title">Decoración de interiores</h5>
+                <p class="card-text mb-3 ">Inscribite a este nuevo curso.</p>
+                <a href="html/cursos.html" class="button">Ver más</a>
             </div>
             <div class="card-footer text-muted">
-              2 days ago
+                2 days ago
             </div>
         </div>
     </section>
